sasql/tests/compile_fail/empty_sql.rs
fn main() {
    let _ = sasql::query!("");
}
